--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg">
-                    <img src="/WTGod-Design/Greek.jpg" alt="" class="img-thumbnail">
+                    <a href="justtest.html"><label><img src="/WTGod-Design/Greek.jpg" alt="" class="img-thumbnail"></label></a>
                 </div>
                 <div class="col-lg">
-                    <img src="/WTGod-Design/Norse.jpg" alt="" class="img-thumbnail">
+                    <a href="justtest.html"><label><img src="/WTGod-Design/Norse.jpg" alt="" class="img-thumbnail"></label></a>
                 </div>
                 <div class="col-lg">
-                    <img src="/WTGod-Design/Egypt.jpg" alt="" class="img-thumbnail">
+                    <a href="justtest.html"><label><img src="/WTGod-Design/Egypt.jpg" alt="" class="img-thumbnail"></label></a>
                 </div>
             </div>
         </div>
