--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </form>
             </div>
         </nav>
-        <img src="/WTGod-Design/Labelhome.jpg" alt="" class="img-thumbnail">
+        <img src="/Full-Design/Labelhome.jpg" alt="" class="img-thumbnail">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg">
