--- a/indextest.html
+++ b/indextest.html
@@ -20,6 +20,7 @@
         </script>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
 
 <body>
@@ -27,23 +28,23 @@
         <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto pl-5">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Home</a>
+                    <li class="nav-item" >
+                        <a class="nav-link active" href="#" style="padding-left: 100px;font-size: 20px;">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Category</a>
+                        <a class="nav-link" href="#" style="padding-left: 100px;font-size: 20px;">Category</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Team</a>
+                        <a class="nav-link" href="#" style="padding-left: 100px;font-size: 20px;">Team</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#" style="padding-left: 100px;font-size: 20px;">Contact</a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-sm-0">
-                    <input class="form-control mr-sm-3" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" style="width: 500px;border-radius: 10px;">
+                    <button class="btn my-2 my-sm-0 " style="color: white;bg-co" type="submit"><i class="fas fa-search"></i></button>
+                  </form>
             </div>
         </nav>
         <div class="home">
