--- a/EgyptHTML/ra.html
+++ b/EgyptHTML/ra.html
@@ -192,7 +192,7 @@
         </div>
         <section class="pics" id="pics">
             <div class="page6">
-                <img src="Full-Design/Osiris6.jpg" class="img-fluid">
+                <img src="../Full-Design/Osiris6.jpg" class="img-fluid">
                 
                 <div class="slider">
                         <input type="radio" name="slide_switch" id="id1"/>
