--- a/NorseHTML/odin.html
+++ b/NorseHTML/odin.html
@@ -39,7 +39,7 @@
                         <a class="nav-link" href="#pics">รูปภาพ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="justtest.html">เทพเจ้านอร์ส</a>
+                        <a class="nav-link" href="../ChooseHTML/NorseC.html">เทพเจ้านอร์ส</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " href="indextest.html">หน้าแรก</a>
@@ -53,7 +53,7 @@
         </nav>
         <section class="top" id="top">
             <div class="home">
-                <img src="../Full-Design/Frigg.jpg" class="img-fluid">
+                <img src="../Full-Design/Odin.jpg" class="img-fluid">
                 <div class="snow"></div>
 
             </div>
@@ -66,19 +66,19 @@
             <img src="../Full-Design/Odin1.jpg" class="img-fluid">
             <div class="container-fluid">
                 <div class="boxtext1">
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>Frigg</b> เป็นแม่ของ Baldr
-                        เทพเจ้าแห่งแสงสว่างและความบริสุทธิ์ วันหนึ่งฟริกก์ฝันว่าบัลเดอร์ตาย
-                        เลยไปอ้อนวอนต่อพลังธรรมชาติทุกแห่งเพื่อไม่ให้มีสิ่งใดทำอันตรายลูกตัวเองได้แต่ Loki
-                        เทพตัวป่วนเจ้าเก่าก็อาศัยเล่ห์เหลี่ยมล้วงจุดอ่อนมาได้จนรู้ว่า Frigg ไม่ได้ไปขอพรจากต้น Mistletoe
-                        เพราะมองว่าอ่อนเกินไป ทำอันตรายลูกไม่ได้หรอก ดังนั้น โลกิจึงสร้างลูกธนูจากต้น Mistletoe
-                        และยิงใส่ Baldr จนตายคาที่ ซึ่งเป็นจุดเริ่มต้นแห่งมหาสงคราม Ragnarök
-                        ที่เกิดการต่อสู้และเข่นฆ่าระหว่างเหล่าเทพนั่นเอง <br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;<b>เนื่องจาก</b> ฟริกก์เป็นเทวีแห่งความงาม เมฆและท้องฟ้า
-                        ยามว่างนางจะเอาปุยเมฆมาปั่นเป็นด้ายเพื่อทอผ้า
-                        Frigg เป็นภรรยาของ Odin เทพีแห่งสวรรค์และยังเป็นราชินีแห่งÆsir
-                        เช่นเดียวกับเฟรยา เธอควบคุมความอุดมสมบูรณ์ความรัก
-                        แต่ยังควบคุมการจัดการบ้านการแต่งงานการเป็นมารดาและศิลปะในบ้าน
-                        เทพธิดาแห่งนี้มีพลังแห่งการพยากรณ์(ถึงแม้ว่ามันจะขัดแย้งกัน) แต่เธอไม่เคยบอกสิ่งที่เธอเห็น</p>
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>Odin</b> เทพเจ้าสูงสุดในเทพปกรณัมของชาวนอร์ส
+                        เป็นเทพเจ้าที่ใฝ่หาความรู้ ยึดมั่นในสัจจะ ช่วยเหลือผู้อื่น และออกผจญภัยเพื่อใช้ชีวิตให้คุ้มค่า
+                        รบอย่างกล้าหาญเพื่อให้ได้ตายอย่างมีเกียรติในสนามรบ
+                        ให้ลูกหลานนำเรื่องราวของตนไปเล่าขานในฐานะวีรบุรุษ
+                        และเพื่อให้ดวงวิญญาณได้รับเลือกให้เข้าร่วมกับกองทัพเทพ ร่วมต่อสู้กับยักษ์ในวันสิ้นโลก
+                        (ไวกิ้งเป็นตัวอย่างหนึ่งของชนที่นับถือศาสนานี้)
+                        แม้เทพโอดินทรงสร้างโลกแต่พระองค์ก็ไม่สามารถล่วงรู้อนาคตของโลกได้ โดยเฉพาะความลับสูงสุดของจักรวาล
+                        การถือกำเนิด ชีวิตหลังความตาย และอนาคตของโลก เพื่อให้ทรงทราบความลับเหล่านี้
+                        จึงทรงทรมาณองค์เองโดยผูกเท้าข้างหนึ่งกับพฤกษาที่เป็นแกนกลางของโลก (อิกก์ดราซิล) แทงหอกที่สีข้าง
+                        ทรมาณอยู่ถึง 9 วัน 9 คืน จนถึงกับสิ้นพระชนม์ <br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;<b>แต่แล้ว</b> ก็ทรงฟื้นคืนขึ้นมาใหม่โดยไม่เจ็บปวด
+                        แต่เต็มเปี่ยมไปด้วยปรีชาญาณ ทรงบันทึกสิ่งที่พระองค์ค้นพบในรูปแบบอักษรศักดิ์สิทธิ์ 24 ตัว
+                        เรียกว่า รูนส์ ซึ่งต่อมาทรงพระราชทานรูนส์แก่ชาวโลกเพื่อให้ใช้ในฐานะเทพพยากรณ์น</p>
                 </div>
             </div>
         </div>
@@ -87,14 +87,25 @@
         <img src="../Full-Design/Odin2.jpg" class="img-fluid">
         <div class="container-fluid">
             <div class="boxtext2">
-                <p class ="txtx"align = "center"><b class="bold1">สรุปฉบับย่อ!!</b></p>
-                   <p><b>►ตามตำนานเทพเจ้านอร์ส◄</b><br>
-                    • เป็นเทพีแห่งความรัก (แบบความอบอุ่นในครอบครัว)<br>
-                    • เทพีแห่งความรู้และการล่วงรู้<br>
-                    • คำว่า Friday มาจากชื่อของ Frigg<br>
-                    • อาศัยอยู่ที่วังชื่อ Fensalir<br>
-                    • เป็นผู้ไปขอร้องทุกสรรพสิ่งไม่ให้ทำร้ายบัลเดอร์<br>
-                    • เป็นภรรยาของโอดิน</p>
+                <p class="txtx" align="center"><b class="bold1">สรุปฉบับย่อ!!</b></p>
+                <p><b>►ตามตำนานเทพเจ้านอร์ส◄</b><br>
+                    • เทพสูงสุดของชาวนอร์ส เป็นเทพบิดรผู้ให้กำเนิดเทพวงศ์เอซีร์ <br>
+                    • เคยแขวนตัวเองไว้กับกิ่งของต้นอิกดราซิลเพื่อแลกกับความรู้ทั้งหมดบนโลก <br>
+                    • ยอมแลกดวงตาข้างนึงเพื่อดื่มน้ำจากบ่อน้ำพุแห่งปัญญาเพื่อให้รู้ถึงโชคชะตาของโลก <br>
+                    • มีอีกาคู่ใจสองตัวคือฮูกินน์และมูนินน์ <br>
+                    • โอดินมีชื่อเรียกหลายชื่อ หนึ่งในนั้นนำมาเป็นชื่อของวันพุธ <br>
+                    • มีพาหนะเป็นม้า 8 ขาชื่อ สเลปนีร์ <br>
+                    • ใช้หอกกุงนีร์ที่ไม่เคยพลาดเป้าเป็นอาวุธ <br>
+                    • พยายามทุกวิธีทางเพื่อหยุดยั้งการเกิดแร็คนาร็อค <br>
+                    • เป็นพ่อของธอร์/บัลเดอร์/เฮมดอลล์ (ลูกคนละแม่กันหมด) <br>
+                    • เป็นพี่น้องร่วมสาบานกับโลกิ <br>
+                    • ผู้นำทัพเทพเอซีร์ต่อสู้กับเทพวานีร์ <br>
+                    • เป็นผู้สร้างวังวาลฮาลาและทัพวาลคีรี่(เพื่อเอาไว้ใช้ตอนสงครามแร็คนาร็อค) <br>
+                    • เป็นผู้สร้างอักษรรูน <br>
+                    • อาศัยอยู่ที่วังกลาสไฮม์ <br>
+                    • นั่งบนบัลลังค์ลิดสไคล์ฟที่สามารถมองเห็นได้ทั้ง 9 โลก <br>
+                    • โดน Fenrir ฆ่าในสงครามแร็คนาร็อค <br>
+                    • เป็นผู้ปลูกต้นอิกดราซิลโดยคำว่าอิกดราซิลมีความหมายว่า ม้าของโอดิน </p>
             </div>
         </div>
     </div>
@@ -105,20 +116,20 @@
             <div class="slider">
                 <input type="radio" name="slide_switch" id="id1" />
                 <label for="id1">
-                    <img src="https://www.img.in.th/images/7d287549ed92bd503e2b26f7c7952144.jpg" alt="7d287549ed92bd503e2b26f7c7952144.jpg"
-                        width="100" />
+                    <img src="https://www.img.in.th/images/7d287549ed92bd503e2b26f7c7952144.jpg"
+                        alt="7d287549ed92bd503e2b26f7c7952144.jpg" width="100" />
                 </label>
-                <img
-                    src="https://www.img.in.th/images/7d287549ed92bd503e2b26f7c7952144.jpg" alt="7d287549ed92bd503e2b26f7c7952144.jpg" />
+                <img src="https://www.img.in.th/images/7d287549ed92bd503e2b26f7c7952144.jpg"
+                    alt="7d287549ed92bd503e2b26f7c7952144.jpg" />
 
                 <!--Lets show the second image by default on page load-->
                 <input type="radio" name="slide_switch" id="id2" checked="checked" />
                 <label for="id2">
-                    <img src="https://www.img.in.th/images/551b22e798ad344168f85a4dbd5df0d0.jpg" alt="551b22e798ad344168f85a4dbd5df0d0.jpg"
-                        width="100" />
+                    <img src="https://www.img.in.th/images/551b22e798ad344168f85a4dbd5df0d0.jpg"
+                        alt="551b22e798ad344168f85a4dbd5df0d0.jpg" width="100" />
                 </label>
-                <img
-                    src="https://www.img.in.th/images/551b22e798ad344168f85a4dbd5df0d0.jpg" alt="551b22e798ad344168f85a4dbd5df0d0.jpg" />
+                <img src="https://www.img.in.th/images/551b22e798ad344168f85a4dbd5df0d0.jpg"
+                    alt="551b22e798ad344168f85a4dbd5df0d0.jpg" />
 
                 <input type="radio" name="slide_switch" id="id3" />
                 <label for="id3">
