Add All Norse Web
Add all norse web

--- a/NorseHTML/odin.html
+++ b/NorseHTML/odin.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="frigg.css">
+    <title>Odin</title>
+    <link rel="stylesheet" href="odin.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -51,6 +51,7 @@
                 </form>
             </div>
         </nav>
+        <!--รูปเทพเจ้าหน้าหลัก-->
         <section class="top" id="top">
             <div class="home">
                 <img src="../Full-Design/Odin.jpg" class="img-fluid">
@@ -90,8 +91,8 @@
                 <p class="txtx" align="center"><b class="bold1">สรุปฉบับย่อ!!</b></p>
                 <p><b>►ตามตำนานเทพเจ้านอร์ส◄</b><br>
                     • เทพสูงสุดของชาวนอร์ส เป็นเทพบิดรผู้ให้กำเนิดเทพวงศ์เอซีร์ <br>
-                    • เคยแขวนตัวเองไว้กับกิ่งของต้นอิกดราซิลเพื่อแลกกับความรู้ทั้งหมดบนโลก <br>
-                    • ยอมแลกดวงตาข้างนึงเพื่อดื่มน้ำจากบ่อน้ำพุแห่งปัญญาเพื่อให้รู้ถึงโชคชะตาของโลก <br>
+                    • เคยแขวนตัวเองกับกิ่งของต้นอิกดราซิลเพื่อแลกกับความรู้ทั้งหมดบนโลก <br>
+                    • แลกตาข้างนึงเพื่อดื่มน้ำจากบ่อน้ำพุแห่งปัญญาเพื่อให้รู้โชคชะตาของโลก <br>
                     • มีอีกาคู่ใจสองตัวคือฮูกินน์และมูนินน์ <br>
                     • โอดินมีชื่อเรียกหลายชื่อ หนึ่งในนั้นนำมาเป็นชื่อของวันพุธ <br>
                     • มีพาหนะเป็นม้า 8 ขาชื่อ สเลปนีร์ <br>
@@ -100,7 +101,7 @@
                     • เป็นพ่อของธอร์/บัลเดอร์/เฮมดอลล์ (ลูกคนละแม่กันหมด) <br>
                     • เป็นพี่น้องร่วมสาบานกับโลกิ <br>
                     • ผู้นำทัพเทพเอซีร์ต่อสู้กับเทพวานีร์ <br>
-                    • เป็นผู้สร้างวังวาลฮาลาและทัพวาลคีรี่(เพื่อเอาไว้ใช้ตอนสงครามแร็คนาร็อค) <br>
+                    • เป็นผู้สร้างวังวาลฮาลาและทัพวาลคีรี่ <br>
                     • เป็นผู้สร้างอักษรรูน <br>
                     • อาศัยอยู่ที่วังกลาสไฮม์ <br>
                     • นั่งบนบัลลังค์ลิดสไคล์ฟที่สามารถมองเห็นได้ทั้ง 9 โลก <br>
@@ -116,36 +117,32 @@
             <div class="slider">
                 <input type="radio" name="slide_switch" id="id1" />
                 <label for="id1">
-                    <img src="https://www.img.in.th/images/7d287549ed92bd503e2b26f7c7952144.jpg"
-                        alt="7d287549ed92bd503e2b26f7c7952144.jpg" width="100" />
+                    <img src="https://www.img.in.th/images/f24cffc340acec01c93610e41b19a40f.jpg" width="100" />
                 </label>
-                <img src="https://www.img.in.th/images/7d287549ed92bd503e2b26f7c7952144.jpg"
-                    alt="7d287549ed92bd503e2b26f7c7952144.jpg" />
+                <img src="https://www.img.in.th/images/f24cffc340acec01c93610e41b19a40f.jpg" />
 
                 <!--Lets show the second image by default on page load-->
                 <input type="radio" name="slide_switch" id="id2" checked="checked" />
                 <label for="id2">
-                    <img src="https://www.img.in.th/images/551b22e798ad344168f85a4dbd5df0d0.jpg"
-                        alt="551b22e798ad344168f85a4dbd5df0d0.jpg" width="100" />
+                    <img src="https://www.img.in.th/images/bb4549fe210b87ddc483bd33952d8cb8.jpg" width="100" />
                 </label>
-                <img src="https://www.img.in.th/images/551b22e798ad344168f85a4dbd5df0d0.jpg"
-                    alt="551b22e798ad344168f85a4dbd5df0d0.jpg" />
+                <img src="https://www.img.in.th/images/bb4549fe210b87ddc483bd33952d8cb8.jpg" />
 
                 <input type="radio" name="slide_switch" id="id3" />
                 <label for="id3">
-                    <img src="https://lh3.googleusercontent.com/zJKyaQ_40O_244AlLszpxi8coP5Z9fCBAJVnISlmKMN9J42GBaQ3W5MTSUrZM1ENF9z8eJeHRDDsJXZwYYqM5Y7CT0rGGqLuVhgiJWADY6c-3CX4-Ke6yzySLAdC6F7xlbYIzyW2Y2K_tB-z3Ca7GtgCxqvSi2bIdp9FXSUh7_HrpzX6mJwqaJWalStS4EEfXScGkzLRZLNrxxo04HiK7Fnr2ragL6ZwjZAiswbDzK8CbWXTSEWe1Fp3dwH3nsLDE7sObtpJo0miB_r64kvs7MEAm-xNRecqET5qk5qFPKqN-CYqt5l74V_XRTEj9pr_odjUqoU2fE-5V-2yayYic_WA6xJQ_C-RHOHZUKvBIJ18jPOaH6Hg2XWidcEXdm_ZT00SxrNXWx1RDV1LpRkCT2opEEjUr5SH5K1iliJ1rWm0VQXz4OS9sl2-xMZlf684_hsM9BT3M_lWTl1N2wNQ_ltxjGPWoEXslOhGYIFgreNAelBfdBm99859BWEfQ5UeVDGMS05AmeoIDA95FddxLNgK8shTeD4vVAi_ZgSfYviI11qP2EGmKRak5CaGP_ejmSwyA9NWecya7KXNyfVhJsR25v9JtKMbQA4P0zna9ngRk1_mQtOaA0RnjWoz9uoC0z_tlvoA4wWAq16kHmfF0vKtzcpz1NVMj9aQOK4_dUDBazN9XFfW9heA=w640-h320-no"
+                    <img src="https://www.img.in.th/images/3ecf0a84548e3c156629eb2892023fd1.jpg"
                         width="100" />
                 </label>
                 <img
-                    src="https://lh3.googleusercontent.com/zJKyaQ_40O_244AlLszpxi8coP5Z9fCBAJVnISlmKMN9J42GBaQ3W5MTSUrZM1ENF9z8eJeHRDDsJXZwYYqM5Y7CT0rGGqLuVhgiJWADY6c-3CX4-Ke6yzySLAdC6F7xlbYIzyW2Y2K_tB-z3Ca7GtgCxqvSi2bIdp9FXSUh7_HrpzX6mJwqaJWalStS4EEfXScGkzLRZLNrxxo04HiK7Fnr2ragL6ZwjZAiswbDzK8CbWXTSEWe1Fp3dwH3nsLDE7sObtpJo0miB_r64kvs7MEAm-xNRecqET5qk5qFPKqN-CYqt5l74V_XRTEj9pr_odjUqoU2fE-5V-2yayYic_WA6xJQ_C-RHOHZUKvBIJ18jPOaH6Hg2XWidcEXdm_ZT00SxrNXWx1RDV1LpRkCT2opEEjUr5SH5K1iliJ1rWm0VQXz4OS9sl2-xMZlf684_hsM9BT3M_lWTl1N2wNQ_ltxjGPWoEXslOhGYIFgreNAelBfdBm99859BWEfQ5UeVDGMS05AmeoIDA95FddxLNgK8shTeD4vVAi_ZgSfYviI11qP2EGmKRak5CaGP_ejmSwyA9NWecya7KXNyfVhJsR25v9JtKMbQA4P0zna9ngRk1_mQtOaA0RnjWoz9uoC0z_tlvoA4wWAq16kHmfF0vKtzcpz1NVMj9aQOK4_dUDBazN9XFfW9heA=w640-h320-no" />
+                    src="https://www.img.in.th/images/3ecf0a84548e3c156629eb2892023fd1.jpg" />
 
                 <input type="radio" name="slide_switch" id="id4" />
                 <label for="id4">
-                    <img src="https://lh3.googleusercontent.com/Rjm0JnDsqypUTULBt3UAhCQXJ-YCsw58Tv_sfGHocIt4IQhlogwuk1dS9TNu3UiVFfsddlZZ4Cqa_gxMtVvSdZKzCdSZMklybW-szYJCX1l2nG87lA7VNvBymQvaeM2cczs5dJyFXckzK4J489lgsDiHFyLWQQmJSM27Sop9m-B1RK1AsNqAgqYviUaKDP-aSyX4OK6JnDPQer9-_aeeARYx4fCTaJmTmiUDGHy8GkOZdpqMSdX_wK8YQFi5wMIIAriJOIpZrAQreRZrvuHc34UhHQ1PVQC4XyTfNzKP7Szo52_rFuCaIHzu-XJ1JKW33V-jfFOP0KYgro8mNAC9eGLKSZP9iuhQ_z6YqZm1W7j1Npg_F-E4Jkid_2j99a6wgQLVjpOOm2L2h03vGpn9F0YjFD-li0YFTE1z0T-lQXFyv6BRZi7jTVME_vMu5qThzxwzWI-MOmBkEjC7MVclcC6f67NJMbzkZ9XcDaHp0aCJiKZk8MQJKicedXlr8fQL1zLBXueWXjJivJxZGJ7BLSlQQf9lE9GNq9BxTLVlGvRE3R4kVuYswu69pjIc33XO8cIHxkeXFBUHjn_F8EKf7SM4nUZ05SXJPGWuQJqYMFlJHGu_n9kSxSP-DIpcdnjZhFO3Hq5miDlepIpwd4N4XIVEl7CNI0gCPpNUJEJdtWLbFP2ieUADmEtB=w640-h320-no"
+                    <img src="https://www.img.in.th/images/a7ebc349cd642a532354b707032bb2ef.jpg"
                         width="100" />
                 </label>
                 <img
-                    src="https://lh3.googleusercontent.com/Rjm0JnDsqypUTULBt3UAhCQXJ-YCsw58Tv_sfGHocIt4IQhlogwuk1dS9TNu3UiVFfsddlZZ4Cqa_gxMtVvSdZKzCdSZMklybW-szYJCX1l2nG87lA7VNvBymQvaeM2cczs5dJyFXckzK4J489lgsDiHFyLWQQmJSM27Sop9m-B1RK1AsNqAgqYviUaKDP-aSyX4OK6JnDPQer9-_aeeARYx4fCTaJmTmiUDGHy8GkOZdpqMSdX_wK8YQFi5wMIIAriJOIpZrAQreRZrvuHc34UhHQ1PVQC4XyTfNzKP7Szo52_rFuCaIHzu-XJ1JKW33V-jfFOP0KYgro8mNAC9eGLKSZP9iuhQ_z6YqZm1W7j1Npg_F-E4Jkid_2j99a6wgQLVjpOOm2L2h03vGpn9F0YjFD-li0YFTE1z0T-lQXFyv6BRZi7jTVME_vMu5qThzxwzWI-MOmBkEjC7MVclcC6f67NJMbzkZ9XcDaHp0aCJiKZk8MQJKicedXlr8fQL1zLBXueWXjJivJxZGJ7BLSlQQf9lE9GNq9BxTLVlGvRE3R4kVuYswu69pjIc33XO8cIHxkeXFBUHjn_F8EKf7SM4nUZ05SXJPGWuQJqYMFlJHGu_n9kSxSP-DIpcdnjZhFO3Hq5miDlepIpwd4N4XIVEl7CNI0gCPpNUJEJdtWLbFP2ieUADmEtB=w640-h320-no" />
+                    src="https://www.img.in.th/images/a7ebc349cd642a532354b707032bb2ef.jpg" />
 
 
                 <!-- We will use PrefixFree - a script that takes care of CSS3 vendor prefixes
