--- a/GreekHTML/poseidon.html
+++ b/GreekHTML/poseidon.html
@@ -61,22 +61,10 @@
         <div class="page2">
             <img src="../Full-Design/Zeus1.jpg" class="img-fluid">
             <div class="container-fluid">
-                     <div class="topic">ซีอุส ประมุขแห่งทวยเทพโอลิมปัส</div>
+                     <div class="topic">โพเซดอน เทพเจ้าแห่งท้องทะเลและมหาสมุทร</div>
                 <div class="row">
                     <div class="col-sm">
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; เทพซูส เป็นราชาแห่งทวยเทพ
-                        ผู้ปกครองเขา โอลิมปัส (Olympus) และเทพแห่งท้องฟ้าและฟ้าร้องของ ตำนานเทพปกรณัมกรีก
-                        สัญลักษณ์ประจำพระองค์คือสายฟ้า โคเพศผู้ นกอินทรี และต้นโอ๊ก
-                        นามของซีอุสแปลว่าความสว่างของท้องฟ้า นามของพระองค์ในตำนานเทพปกรณัมโรมันคือ เทพจูปิเตอร์
-                        (Jupiter) และนามในตำนานอีทรูสแคนคือเทพไทเนีย (Tinia)
-                        พระองค์เป็นพระโอรสองค์สุดท้องของ โครนัส (Cronus) และ รีอา(Rhea)
-                        ซึ่งเป็นเทพไททันในหลายๆตำนานกล่าวว่าพระองค์ได้สมรสกับ เทพีเฮร่า (Hera)
-                        แต่ก็มีสถานศักดิ์สิทธิ์แห่ง เมืองดอโดน่า
-                        (Dodona) ที่อ้างว่าคู่สมรสของเทพซูสแท้จริงแล้วคือ เทพีไดโอนิ (Dione) นอกจากนี้
-                        มหากาพย์อีเลียด (Illiad) ยังกล่าวไว้ว่าเทพซูสเป็นพระบิดาของ เทพีอโฟรไดต์ (Aphrodite)
-                        ที่กำเนิดจากเทพีไดโอเน่อีกด้วย
-                        เทพซูสมักมีชื่อเสียงในพฤติกรรมนอกลู่นอกทางเรื่องชู้สาวของพระองค์
-                        ซึ่งยังรวมไปถึงความสัมพันธ์กับเด็กหนุ่มนาม แกนีมีด (Ganymede)ด้วยเช่นกัน
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; โพไซดอน เทพเจ้าแห่งท้องทะเลและมหาสมุทร ผู้ปกครองดินแดนแห่งท้องน้ำ ตั้งแต่แหล่งน้ำจืด เช่น แม่น้ำ ลำคลอง จนถึงใต้บาดาล มีตรีศูลเป็นอาวุธ บางตำนานกล่าวว่ามีท่อนล่างเป็นปลา  นอกจากนี้แล้วยังถือว่าเป็นเทพแห่งแผ่นดินไหวและเป็นเทพแห่งม้าด้วย  
                     </div>
                 </div>
             </div>
@@ -86,22 +74,12 @@
         <img src="../Full-Design/Zeus2.jpg" class="img-fluid">
         <div class="container-fluid">
             <div class="boxtext2">
-                <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>พฤติกรรมของพระองค์</b>ทำให้เกิดผู้สืบเชื้อสายอยู่หลายองค์และหลายคนด้วยกัน
-                    อาทิเช่น เทพีอาธีน่า (Athena),
-                    เทพอพอลโล (Apollo), เทพีอาร์ทีมีส (Artemis), เทพเฮอร์มีส (Hermes), เทพีเพอร์ซิโฟเน่
-                    (Persephone), เทพไดโอไนซัส(Dionysus), วีรบุรุษเพอร์ซิอุส (Perseus), วีรบุรุษเฮอร์คิวลีส
-                    (Hercules), เฮเลนแห่งทรอย (Helen), กษัตริย์ไมนอส (Minos) และเหล่า เทพีมิวเซส (Muses)
-                    ส่วนผู้สืบเชื้อสายที่เกิดจากเทพีเฮร่าโดยตรงได้แก่ เทพเอรีส (Ares), เทพีเฮบี (Hebe), เทพ
-                    เอฟเฟสตตุส (Hephaestus), เทพีเอริส (Eris) และ เทพีไอไลธีเอีย (Eileithyia)
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>รูปลักษณ์ของโพเซดอน</b>ส่วนมากจะปรากฏเป็นชายวัยกลางคน รูปร่างกำยำล่ำสัน มีหนวดเคราถือสามง่ามเป็นอาวุธ ซึ่งสามง่ามนี้มีอิทธิฤทธิ์มาก สามารถดลบันดาลให้เกิดทะเลคลั่งหรือแผ่นดินไหวได้ ครั้งหนึ่งโพเซดอนเคยคิดที่จะโค่นอำนาจของซุสโดยร่วมมือกับเฮรา และ อะธีนา แต่ก็ไม่สำเร็จจึงถูกซุสลงโทษ โดยการให้ไปสร้างกำแพงเมืองทรอยร่วมกับอพอลโลด้วยเช่นกัน
                 </p>
             </div>
             <div class="boxtext5">
-                <p> เทพีไกอาแค้นเทพยูเรนัสมากจึงยุยงให้เหล่าเทพไททันก่อกบฏ
-                    ไม่มีเทพองค์ใดที่กล้าชิงบัลลังก์พระบิดายกเว้นเทพโครนัส
-                    และจากการช่วยเหลือจากเทพีไกอาทำให้เทพโครนัสชิงอำนาจได้สำเร็จ
-                    ทว่าเทพโครนัสไม่ได้ทำตามสัญญาที่จะปลดปล่อยอสูรผู้เป็นน้อง
-                    เทพีไกอาจึงสาปแช่งว่าบุตรที่จะเกิดมาของโครนัสจะชิงอำนาจไปเหมือนกับที่บิดาเคยทำเทพโครนัสตระหนักมากเพราะหลังจากนั้นไม่นาน
-                    เทพีรีอา พระชายาก็ตั้งครรภ์ เมื่อได้ข่าวการประสูติ
+                <p> โพเซดอนมีมเหสีองค์หนึ่งคือแอมฟิไทรท์ ซึ่งเป็น นีริอิด หรือบุตรสาวของ นีริอัส และ ดอริส  โพไซดอนเห็นนางตอนกำลังเต้นรำร่วมกับเหล่านีริอิดอื่นๆ จึงได้ทำการลักพาตัวนางไปเป็นชายาในดินแดนใต้สมุทร
+                และชายาอีกองค์หนึ่งของโพไซดอนเป็นหญิงรับใช้ของอะธีนา คือ เมดูซ่า เพราะหลงใหลในความงามของเมดูซ่า แต่เมื่ออะธีนาทราบเรื่องจึงสาบเมดูซ่าให้เป็นปีศาจที่มีผมเป็นงู และเมื่อมองใครก็จะกลายเป็นหินไปหมด เมื่อเปอร์ซิอุสได้ทำการตัดศีรษะของเมดูซ่าแล้ว เลือดของเมดูซ่าที่กระเซ็นออกมา กลายเป็นม้าบินสองตัว คือ เพกาซัส (Pegasus) และ คริสซาออร์ (Chrysaor) 
 
                 </p>
             </div>
@@ -117,11 +95,9 @@
         <div class="boxtext4">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <b
-                class="bold2">เทพโครนัสจึงบุกเข้าไปใน</b>ตำหนักพระชายาและจับทารกผู้เป็นสายเลือดของตนกลืนลงท้องไป
-            และครรภ์ต่อๆมาของเทพีรีอาก็เช่นกัน ส่งผลให้เทพีรีอาเศร้าเสียใจอย่างมากโครนัสให้กำเนิดบุตรและธิดารวมหกองค์
-            คือ เฮสเทีย เฮดีส ดีมิเตอร์ โพไซดอน เฮรา ซูส
-            ซึ่งพอกำเนิดมาได้ถูกโครนัสจับกลืนลงท้องไปแต่เนื่องด้วยซูสหนีออกมาได้ จึงรอให้ตัวเองโตแล้วกลับมาช่วยอีก 6
-            องค์ในภายหลัง เนื่องจาก เฮสเทีย เฮดีส ดีมิเตอร์ โพไซดอน และเฮรา เป็นเทพจึงไม่ตายตอนอยู่ในท้องของโครนัส
+                class="bold2">ดังนั้นจึงถือว่า</b> ทั้งเพกาซัสและคริสซาออร์เป็นลูกของโพเซดอนด้วย
+                โพเซดอน มีพาหนะเป็นม้าน้ำเทียมรถ ที่มีส่วนบนเป็นม้าและท่อนล่างเป็นปลา ซึ่งบางครั้งจะพบรูปโพเซดอนอยู่บนรถเทียมม้าน้ำนี้ขึ้นมาจากทะเลในสมัยโบราณ ที่แหลมสุนิอ้อน ห่างจาก กรุงเอเธนส์ เมืองหลวงของกรีซไม่มาก มีวิหารที่สร้างถวายแด่โพเซดอนอยู่
+
 
         </div>
     </div>
