--- a/EgyptHTML/Anubis.html
+++ b/EgyptHTML/Anubis.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="osirisstyle.css">
+    <link rel="stylesheet" href="Anubis.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
@@ -49,7 +49,7 @@
         </nav>
         <section class="top" id="top">
             <div class="home">
-                <img src="../Full-Design/Osiris.jpg" class="img-fluid">
+                <img src="../Full-Design/Anubis.jpg" class="img-fluid">
                 <div class="clouds">
 
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="762px" height="331px" viewBox="0 0 762 331" enable-background="new 0 0 762 331" xml:space="preserve" class="cloud big front slowest">
@@ -96,11 +96,18 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;โอไซริส (อังกฤษ: Osiris; กรีกโบราณ: Ὄσιρις) เป็นเทพอียิปต์ซึ่งมักได้รับการระบุว่า เป็นเทพแห่งชีวิตหลังความตาย เทพแห่งนรก และเทพแห่งวิญญาณ เดิมทีเชื่อกันว่า เป็นบุรุษเพศ มีกายสีเขียว มีมัสสุดังฟาโรห์
-                            กายเบื้องล่างพันผ้าห่อศพไว้ ฉลองมงกุฏประดับขนนกกระจอกเทศสองข้าง หัตถ์ทั้งสองถือตะขอกับไม้หวดข้าวเซธ (Seth) โอไซริสเป็นโอรสของเก็บ (Geb) เทพผืนดิน กับนัต (Nut) เทพีท้องฟ้า ทั้งเป็นเชษฐภาดาและภัสดาของไอซิส (Isis) มีโอรสด้วยกันหนึ่งองค์เมื่อสิ้นชนม์ไปแล้ว
-                            คือ ฮอรัส (Horus) โอไซริสยังเกี่ยวเนื่องกับสมญาที่ว่า "เค็นที-อาเมนทีอู" (Khenti-Amentiu) แปลว่า ที่สุดแห่งชาวตะวันตก ซึ่งหมายถึง การได้ปกครองนรกภูมิ โอไซริสในฐานะมัจจุราชนั้นบางทีได้รับการเรียกขานว่า "เจ้าชีวิต" (king of the
-                            living) เพราะชาวอียิปต์โบราณถือว่า วิญญาณที่ได้รับเซ่นสรวงบูชานั้นเป็น "สิ่งมีชีวิต" (living one)
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;อานูบิส (Anubis) เป็นหนึ่งในเทพเจ้าของชาวอียิปต์ ซึ่งเทพเจ้าองค์นี้มีบทบาทสำคัญต่อการใช้ชีวิตของชาวอียิปต์อย่างยิ่ง ที่เป็นเช่นนี้เนื่องจาก อานูบิสเป็นเทพแห่งความตาย และเป็นเทพสำคัญในการทำมัมมี่
+                            ในพิธีการทำศพของชาวอียิปต์โบราณ และโลกหลังความตายของมนุษย์ อานูบิส เป็นโอรสระหว่างเทพเซต (Set) และ เทพีเนฟทิส (Nephtys) ซึ่งถือเป็นหลานของเทพโอซิริส (Osiris) และ เทพีไอซิส (Isis) ด้วย แต่บางตำราก็ได้กล่าวไว้ว่า เทพอานูบิสเคารพนับถือเทพีไอซิสเสมือนเป็นแม่แท้ๆของตนเอง
+                            การนับถือเทพอานูบิสมีที่มาจากเมือง อาบิโดส (Abydos) ที่อยู่ทางตอนเหนือของอียิปต์ แต่มีศูนย์กลางของความเชื่อดังกล่าวนี้อยู่ที่เมืองไซโนโปลิส (Cynopolis) ที่ตั้งอยู่ในอียิปต์ตอนเหนือ นอกจากนี้ยังมีความเชื่อกันว่า พิธีกรรมการนับถือเทพอานูบิสมีมาอย่างยาวนานมากแล้ว
+                            และมีการสร้างรูปปั้นหมาในสีดำหรือสีทอง ขึ้นเพื่อเป็นตัวแทนของเทพองค์นี้อยู่บ้างด้วย
+
                         </div>
+                    </div>
+                    <div class="boxtext1">
+                        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>ลักษณะ</b> ของเทพอานูบิสเป็นเทพที่มีลำตัวเป็นมนุษย์ แต่มีส่วนศีรษะไปจนถึงคอเป็นหมาในสีดำ ซึ่งสันนิษฐานได้ว่าการที่ลักษณะของเทพอานูบิสมีใบหน้าเป็นหมาใน ก็เพราะสัตว์ชนิดนี้มักจะหากินในช่วงกลางคืน
+                            และพบได้บ่อยแถวๆสุสานของคนตาย ด้วยเหตุนี้ เทพอานูบิสจึงถูกชาวอียิปต์นับถือกันในนามเทพผู้พิทักษ์คนตายและสุสาน ส่วนอาวุธในมือของเทพอานูบิส เป็นคทา คนบางคนอาจเรียกเทพองค์นี้ว่า อันปุ (Anpu) เทพอานูบิสมีหน้าที่หลัก คือ การนำดวงวิญญาณของคนตายไปสู่ยมโลก
+                            ทั้งนี้ก็เพื่อให้วิญญาณผู้นั้นได้รับผลกรรมที่ตนได้ทำเอาไว้ก่อนตาย ต่อหน้าองค์เทพโอซิริส (Osiris)
+                        </p>
                     </div>
                 </div>
             </div>
@@ -109,10 +116,9 @@
             <img src="../Full-Design/Osiris3.jpg" class="img-fluid">
             <div class="container-fluid">
                 <div class="boxtext2">
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b class="bold1">โอไซริส</b> ปรากฏเป็นครั้งแรกในช่วงกลางราชวงศ์ที่ห้าแห่งอียิปต์ แต่น่าเชื่อว่า ได้รับการเคารพบูชามาก่อนหน้านั้นแล้ว นอกจากนี้ สมญา "เค็นที-อาเมนทีอู" ยังปรากฏย้อนหลังไปถึงราชวงศ์ที่หนึ่งโดยเป็นสมัญญาสำหรับพระมหากษัตริย์ด้วย
-                        เรื่องราวเกี่ยวกับโอไซริสนั้นส่วนใหญ่ได้มาจากการกล่าวถึงในตำราพีระมิด (Pyramid Texts) ซึ่งแต่งขึ้นเมื่อปลายราชวงศ์ที่ห้า ตลอดจนเอกสารในชั้นหลัง ๆ เช่น ศิลาชาบากา (Shabaka Stone) และคัมภีร์เรื่อง การชิงชัยระหว่างฮอรัสกับเซท (Contending
-                        of Horus and Seth) รวมถึงการพรรณนาในงานเขียนของปรัชญาเมธีกรีกหลายคน เช่น พลูตาร์ก (Plutarch) และดีโอโอรัส ซีกูลัส (Diodorus Siculus)
-                    </p>
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b class="bold1">การตัดสินจะทำโดย</b> เทพอานูบิสจะวางหัวใจของผู้ตายเอาไว้บนตาชั่งข้างหนึ่ง และวางขนนกได้รับมาจากเทพมูอาท (Muat) เอาไว้ที่ตาชั่งข้างหนึ่ง หากหัวใจของผู้ตายมีน้ำหนักเบากว่าขนนก
+                        แสดงว่าผู้ตายเคยทำกรรมอันเป็นกุศลไว้มาตั้งแต่ตอนที่คนผู้นั้นยังมีชีวิตอยู่ ซึ่งสมควรที่จะได้รับพรให้มีชีวิตเป็นนิรันดร์จากเทพโอชิริส และเดินทางไปอยู่ในสถานที่ที่เรียกว่า “Fields of the Reed” หรือสวรรค์ของชาวอียิปต์นั่นเอง ในทางตรงกันข้าม
+                        คนที่มีน้ำหนักของหัวใจมากกว่าขนนก ก็จะถูกสัตว์ที่เป็นอสูรที่มีนามว่า อัมมุท (Ammut) กลืนกินหัวใจของดวงวิญญาณดวงนั้นเข้าไปทันที ทำให้ดวงวิญญาณดวงนั้นสูญสลายหายไปตลอดกาล และถือว่าเป็นการตายแบบถาวรที่ไม่สามารถฟื้นคืนชีพกลับคืนมาได้อีก</p>
                 </div>
             </div>
         </div>
@@ -120,15 +126,14 @@
         <div class="page4">
             <img src="../Full-Design/Osiris4.jpg" class="img-fluid">
             <div class="boxtext3">
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <b class="bold2"></b>ในนรกภูมิ ถือว่า โอไซริสเป็นตุลาการผู้เปี่ยมเมตตา ทั้งยังทำหน้าที่แทนนรกในการบันดาลให้เกิดสรรพชีวิต รวมถึง การแตกหน่อก่อผลของพืชผัก และการสร้างน้ำท่วมเพื่อความอุดมสมบูรณ์ริมฝั่งไนล์ นอกจากนี้ โอไซริสยังได้ชื่อว่าเป็น
-                "กามเทพ", "พระผู้ปราศศัตรูและทรงเยาว์วัยตลอดกาล" และ "เจ้าแห่งความสงัด" พระเจ้าแผ่นดินอียิปต์จะทรงเป็นส่วนหนึ่งของโอไซริสเมื่อสิ้นพระชนม์แล้ว
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ที่มาของมัมมี่เริ่มต้นมาจากครั้งที่เทพเซ็ตกำลังตามล่าเทพโอซิริสและเทพีไอซิส เทพโอซริสได้ถูกเทพเซตสังหารไป และมีอานูบิสผู้นี้คอยรับอาสาเป็นผู้ดูแลรักษาพระศพของเทพโอซิริส เทพอานูบิสจึงได้สัญญากับพระมารดาทั้งสองว่าตนเองจะเป็นผู้ดูแลร่างของโอซิริสไว้ให้ปลอดภัยเอง
+
             </div>
 
             <div class="boxtext4">
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <b class="bold2">เชื่อกันว่า</b> เมื่อสิ้นพระชนม์ โอไซริสจะสถิตอยู่ในพระวิญญาณ และพระวิญญาณที่มีโอไซริสเป็นส่วนหนึ่งนี้จะดำรงอยู่ชั่วกัลปาวสานหลังผ่านพิธีกรรมทางไสยเวทบางประการ ครั้นถึงช่วงอาณาจักรใหม่ ความเชื่อเปลี่ยนไปว่า ใช่แต่พระเจ้าแผ่นดินเท่านั้นที่จะเข้ารวมกับโอไซริสในโลกหลังความตาย
-                บุคคลธรรมดาสามัญทั้งหลายก็ด้วย แต่ต้องผ่านพิธีกรรมทำนองเดียวกัน
+                <b class="bold2"> ว่าแล้ว </b>เทพอานูบิสได้ใช้ขี้ผึงสูตรเฉพาะที่ตนเองสร้างขึ้นมา บวกกับผ้าลินินสีขาวที่ทอขึ้นจากฝีมือของเทพีไอซิส และเนฟทีส มาห่อหุ้มศพร่างนั้นเอาไว้ ตำนานที่กล่าวมานี้เอง ทำให้เทพอานูบิสถูกนับถือให้เป็นเทพผู้พิทักษ์คนตายและคอยนำทางวิญญาณไปสู่โลกหลังความตาย
+                ทำให้ในสมัยโบราณ นักบวชที่ทำพิธีกรรมเกี่ยวกับศพจะสวมหน้ากากที่มีลักษณะเป็นรูปหมาใน เพื่อเป็นสัญลักษณ์ในการบูชาเทพอานูบิสนั่นเอง
             </div>
         </div>
 
@@ -142,32 +147,28 @@
                 <div class="slider">
                     <input type="radio" name="slide_switch" id="id1" />
                     <label for="id1">
-                        <img src="https://www.img.in.th/images/2e147fb9abc57318cfd790922fadfe84.jpg" alt="440122b988427f100d9c9019b473c59c.jpg"
-                            width="100" />
-                    </label>
-                    <img src="https://www.img.in.th/images/2e147fb9abc57318cfd790922fadfe84.jpg" alt="440122b988427f100d9c9019b473c59c.jpg" />
+                            <img src="https://www.img.in.th/images/b298b1f26295bf59657bd6cf80f16e54.jpg" width="100"/>
+                        </label>
+                    <img src="https://www.img.in.th/images/b298b1f26295bf59657bd6cf80f16e54.jpg" />
 
                     <!--Lets show the second image by default on page load-->
                     <input type="radio" name="slide_switch" id="id2" checked="checked" />
                     <label for="id2">
-                        <img src="https://www.img.in.th/images/88660ca04bc0b4b2e93281f49279d0b2.jpg"
-                            width="100" />
-                    </label>
-                    <img src="https://www.img.in.th/images/88660ca04bc0b4b2e93281f49279d0b2.jpg" />
+                            <img src="https://www.img.in.th/images/07a2d39be939b7ca6290a257a7b24d80.jpg"  width="100"/>
+                        </label>
+                    <img src="https://www.img.in.th/images/07a2d39be939b7ca6290a257a7b24d80.jpg" />
 
                     <input type="radio" name="slide_switch" id="id3" />
                     <label for="id3">
-                        <img src="https://www.img.in.th/images/383a0a8c2d0c6076af7a9185e22db3f6.jpg"
-                            width="100" />
-                    </label>
-                    <img src="https://www.img.in.th/images/383a0a8c2d0c6076af7a9185e22db3f6.jpg" />
+                            <img src="https://www.img.in.th/images/da5fc744a19c8a7e4c8f02648de5a45e.jpg" width="100"/>
+                        </label>
+                    <img src="https://www.img.in.th/images/da5fc744a19c8a7e4c8f02648de5a45e.jpg" />
 
                     <input type="radio" name="slide_switch" id="id4" />
                     <label for="id4">
-                        <img src="https://www.img.in.th/images/28104864157b8f1f391d467dd0ef346a.jpg"
-                            width="100" />
-                    </label>
-                    <img src="https://www.img.in.th/images/28104864157b8f1f391d467dd0ef346a.jpg" />
+                            <img src="https://www.img.in.th/images/bb93d2de1ba576e04bf43e6aa8b51a25.jpg"  width="100"/>
+                        </label>
+                    <img src="https://www.img.in.th/images/bb93d2de1ba576e04bf43e6aa8b51a25.jpg" />
 
 
                     <!-- We will use PrefixFree - a script that takes care of CSS3 vendor prefixes
