poseidon demeter zeus

--- a/GreekHTML/poseidon.html
+++ b/GreekHTML/poseidon.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="zeus.css">
+    <link rel="stylesheet" href="poseidon.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -80,7 +80,6 @@
             <div class="boxtext5">
                 <p> โพเซดอนมีมเหสีองค์หนึ่งคือแอมฟิไทรท์ ซึ่งเป็น นีริอิด หรือบุตรสาวของ นีริอัส และ ดอริส  โพไซดอนเห็นนางตอนกำลังเต้นรำร่วมกับเหล่านีริอิดอื่นๆ จึงได้ทำการลักพาตัวนางไปเป็นชายาในดินแดนใต้สมุทร
                 และชายาอีกองค์หนึ่งของโพไซดอนเป็นหญิงรับใช้ของอะธีนา คือ เมดูซ่า เพราะหลงใหลในความงามของเมดูซ่า แต่เมื่ออะธีนาทราบเรื่องจึงสาบเมดูซ่าให้เป็นปีศาจที่มีผมเป็นงู และเมื่อมองใครก็จะกลายเป็นหินไปหมด เมื่อเปอร์ซิอุสได้ทำการตัดศีรษะของเมดูซ่าแล้ว เลือดของเมดูซ่าที่กระเซ็นออกมา กลายเป็นม้าบินสองตัว คือ เพกาซัส (Pegasus) และ คริสซาออร์ (Chrysaor) 
-
                 </p>
             </div>
         </div>
@@ -89,7 +88,7 @@
     <div class="page4">
         <img src="../Full-Design/Zeus3.jpg" class="img-fluid">
         <div class="boxtext3">
-            <img src="../Full-Design/God-png/zeusS.png" class="img-fluid">
+            <img src="../Full-Design/God-png/poseidonS.png" class="img-fluid">
         </div>
 
         <div class="boxtext4">
