--- a/Quiz/quizGreek.html
+++ b/Quiz/quizGreek.html
@@ -20,9 +20,12 @@
 </head>
 
 <body>
-    <div class="page1">
-        <img src="BGgreek.jpg" class="img-fluid">
-    </div>
+    <div class="container">
+        <div class="row row-centered pos">
+            <div class="col-lg-8 col-xs-12 col-centered">
+                    <img src="BGgreek.jpg">
+                </div>
+            </div>
     <div class="wrapper">
         <div id="quiz">
             <h1>Quiz ทบทวนความรู้ตำนานเทพเจ้ากรีก </h1>
@@ -43,6 +46,7 @@
             </div>
         </div>
     </div>
+</div>
 </body>
 
 </html>
